--- a/src/app/pokemon/detail-pokemon/detail-pokemon.component.html
+++ b/src/app/pokemon/detail-pokemon/detail-pokemon.component.html
@@ -38,10 +38,11 @@
                 </div>
                 <div class="card-action">
                     <a (click)="goToPokemonList()" class="btn-flat">Retour</a>
-                    <a (click)="goToEditPokemon(pokemon)" class="btn-flat">Edit</a>
+                    <a (click)="goToEditPokemon(pokemon)" class="btn-flat">Editer</a>
+                    <a (click)="deletePokemon(pokemon)" class="btn-flat">Supprimer</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<h4 *ngIf='!pokemon' class="center">Aucun pokémon à afficher !</h4>
+<h4 *ngIf='!pokemon' class="center"><app-loader></app-loader></h4>
