--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav>
     <div class="nav-wrapper teal">
-        <a (click)="goToPokemonList()" class="brand-logo center">Pokédex</a>
+        <a (click)="goToPokemonList()" class="brand-logo waves-effect center">Pokédex</a>
     </div>
 </nav>
 <router-outlet></router-outlet>
